02-argocd/overlays/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-argocd-server
  namespace: argocd
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  hostnames: ["argocd.audryus.arpa"]
  rules:
    - matches:
      - headers:
          - name: X-Forwarded-Proto
            value: http
      filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
          port: 443
      backendRefs:
      - name: argocd-server
        weight: 1
        port: 80
    - backendRefs:
      - name: argocd-server
        weight: 1
        port: 80
